gravity-infra/kubernetes/01-namespace-configmap.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gravity
  labels:
    app: gravity-pms
